--- a/src/main/resources/web/ylt/services.html
+++ b/src/main/resources/web/ylt/services.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" th:href="@{/css/owl.carousel.css}" type="text/css" media="all">
 	<link rel="stylesheet" th:href="@{/css/owl.theme.css}" type="text/css" media="all">
 	<!-- css files -->
-	<link rel="stylesheet" th:href="@{/css/bootstrap.css}"> <!-- Bootstrap-Core-CSS -->
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- Bootstrap-Core-CSS -->
 	<link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all" /> <!-- Style-CSS -->
 	<link rel="stylesheet" th:href="@{/css/fontawesome-all.css}"> <!-- Font-Awesome-Icons-CSS -->
 	<!-- //css files -->
@@ -510,8 +510,8 @@
 <!-- js-scripts -->		
 
 	<!-- js -->
-	<script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
-	<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap --> 
+	<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+	<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap -->
 	<!-- //js -->
 	
 	<!-- stats -->
