--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" th:href="@{/css/owl.carousel.css}" type="text/css" media="all">
 	<link rel="stylesheet" th:href="@{/css/owl.theme.css}" type="text/css" media="all">
 	<!-- css files -->
-	<link rel="stylesheet" th:href="@{/css/bootstrap.css}"> <!-- Bootstrap-Core-CSS -->
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- Bootstrap-Core-CSS -->
 	<link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all" /> <!-- Style-CSS -->
 	<link rel="stylesheet" th:href="@{/css/fontawesome-all.css}"> <!-- Font-Awesome-Icons-CSS -->
 	<!-- //css files -->
@@ -33,8 +33,10 @@
 			rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
 	<!-- //web-fonts -->
+	<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
-	<script type="text/javascript" th:src="@{/js/encode64.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
 	<script type="text/javascript" th:src="@{/js/ladda.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/spin.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/utils.js}"></script>
@@ -115,22 +117,26 @@
 
 		<div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
 			<div class="btn-group">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Action <span class="caret"></span>
+				<button id="nameSpan" style="color:#fff" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<i class="fas fa-user"></i>
 				</button>
-				<ul class="dropdown-menu">
-					<li><a href="#">Action</a></li>
-					<li><a href="#">Another action</a></li>
-					<li><a href="#">Something else here</a></li>
-					<li role="separator" class="divider"></li>
-					<li><a href="#">Separated link</a></li>
-				</ul>
+				<div class="dropdown-menu">
+					<a href="#" class="dropdown-item" data-toggle="modal" aria-pressed="false" data-target="#changePass">
+						<i class="fas fa-lock"></i> 修改密码</a>
+					<a href="#" class="dropdown-item" data-toggle="modal" aria-pressed="false" data-target="#changePass">
+						<i class="fas fa-superpowers"></i> 升级VIP</a>
+					<a href="#" class="dropdown-item" data-toggle="modal" aria-pressed="false" data-target="#changePass">
+						<i class="fas fa-money-bill-alt"></i> 充值</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" th:href="@{/route/logout}">
+						<i class="fas fa-outdent"></i> 安全退出</a>
+				</div>
 			</div>
-			<a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>
-			<a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
-				<i class="fas fa-lock"></i> 修改密码</a>
-			<a th:href="@{/route/logout}">
-				<i class="fas fa-outdent"></i> 退出</a>
+			<!--<a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>-->
+			<!--<a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
+				<i class="fas fa-lock"></i> 修改密码</a>-->
+			<!--<a th:href="@{/route/logout}">
+				<i class="fas fa-outdent"></i> 退出</a>-->
 		</div>
 	</div>
 </div>
@@ -582,8 +588,6 @@
 		</div>
 	</div>
 </div>
-
-	<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap -->
 	<script th:src="@{/js/owl.carousel.js}"></script>
 	<script>
 		$(document).ready(function () {
