--- a/src/main/resources/web/ylt/lease.html
+++ b/src/main/resources/web/ylt/lease.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" th:href="@{/css/owl.carousel.css}" type="text/css" media="all">
     <link rel="stylesheet" th:href="@{/css/owl.theme.css}" type="text/css" media="all">
     <!-- css files -->
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}"> <!-- Bootstrap-Core-CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all"/> <!-- Style-CSS -->
     <link rel="stylesheet" th:href="@{/css/fontawesome-all.css}"> <!-- Font-Awesome-Icons-CSS -->
     <!-- //css files -->
@@ -31,7 +31,7 @@
     <link th:href="@{/css/city-picker.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/main.css}" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
     <script type="text/javascript" th:src="@{/js/toastr.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/ladda.min.js}"></script>
@@ -505,7 +505,7 @@
     </div>
 </div>
 
-<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap -->
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap -->
 <script type="text/javascript" th:src="@{/js/wickedpicker.js}"></script>
 <script type="text/javascript">
     $('.timepicker').wickedpicker({
